# newhw_automator

./: .gitignore  README.md  config-template.toml  main.py  project_prompt.txt  pyproject.toml  template.docx
.homework_cache/: 计网8.cache.json
